[package]
name = "solana_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-client = "2.0.13"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
dashmap = "6.1.0"
futures = "0.3"
clap = { version = "4.5.20", features = ["derive"] }
solana-tracer-core = { path = "crates/core" }

[workspace]
members = ["crates/core", "crates/rpc_client", "crates/graph_builder"]
