[package]
name = "solana-tracer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
solana-tracer-rpc-client = { path = "../rpc_client" }
solana-tracer-graph-builder = { path = "../graph_builder" }
