[package]
name = "solana-tracer-graph-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"

[dev-dependencies]
proptest = "1.2"
