[package]
name = "solana-tracer-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.13"
solana-sdk = "2.0.13"
solana-transaction-status = "2.0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.28", features = ["full"] }
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
